--- a/ShopApp.WebUI/Views/Home/Index.cshtml
+++ b/ShopApp.WebUI/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ShopApp.Entities.Product>
+﻿@model ShopApp.WebUI.Models.ProductListModel
 
 
 
@@ -13,7 +13,7 @@
     <title>Index</title>
 </head>
 <body>
-    @foreach(var item in Model){
+    @foreach(var item in Model.Products){
         <p>@item.Name</p>
     }
 </body>
