--- a/ShopApp.WebUI/Views/Home/Index.cshtml
+++ b/ShopApp.WebUI/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
 <head>
     <meta name="viewport" content="width=device-widht" />
     <title>Index</title>
+    <link href="/modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
     @foreach(var item in Model.Products){
