--- a/ShopApp.WebUI/Views/Home/Index.cshtml
+++ b/ShopApp.WebUI/Views/Home/Index.cshtml
@@ -1,9 +1,24 @@
 ﻿@model ShopApp.WebUI.Models.ProductListModel
 
+<div class="row">
+    <div class="col-md-3">
+        <ul class="list-group">
+            @foreach (var item in Model.Categories)
+            {
+                <li class="list-group-item">@item.Name</li>
+            }
+
+        </ul>
+
+    </div>
+    <div class="col-md-9">
+        @foreach (var item in Model.Products)
+        {
+            <p>@item.Name</p>
+        }
+    </div>
+</div>
 
 
 
 
-    @foreach(var item in Model.Products){
-        <p>@item.Name</p>
-    }
